Examples/2024-05-arbitrum-foundation/result/mythril_contracts/StakingPoolCreatorUtils.txt
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

TypeError: Member "isContract" not found or not visible after argument-dependent lookup in type(library Address).
  --> /g4b/src/assertionStakingPool/StakingPoolCreatorUtils.sol:16:13:
   |
16 |         if (Address.isContract(pool)) {
   |             ^^^^^^^^^^^^^^^^^^


